css/frm_admin.css
/* ... */
@media only screen and (max-width: 960px) {
	.frm-white-body,
	.frm_wrap {
		--gap-sm: 8px;
		--gap-md: 16px;
		--gap-2xl: 24px;
	}

	.auto-fold #adminmenuwrap {
		width: 36px;
	}

	.frm_wrap #postbox-container-1 #frm_adv_info {
		min-width: 220px;
	}

	p.howto {
		display: inline-block;
	}

}

@media only screen and (max-width: 850px) {
	#frm_bs_dropdown {
		/* There isn't enough room for the title on a screen this size so just hide it. */
		display: none;
	}

	.frm-white-body,
	.frm_wrap {
		--biggest-sidebar: 350px;
		--big-sidebar: 350px;
	}

	#frm_bs_dropdown .frm_bstooltip {
		/* There isn't enough room for the title on a screen this size so just hide it. */
		display: none !important;
	}

	.frm_col_one {
		clear: none;
	}

	.frm-fields p > .frm_inline_label,
	.frm_inline_label {
		display: block;
		margin: 5px 0;
	}

	#frm_top_bar h1 {
		width: auto;
		max-width: 200px;
	}

	#frm-publishing {
		width: auto;
	}

	#frm_form_editor_container,
	.frm-entry-container {
		margin: 0 20px;
	}

	.frmbutton.ui-sortable-helper .frmsvg,
	.field_type_list li.frmbutton .frmsvg,
	.frmbutton.ui-sortable-helper i,
	.field_type_list li.frmbutton i {
		margin: .15em 0 .15em .1em;
		width: 25px;
	}

	.rtl .frmbutton.ui-sortable-helper .frmsvg,
	.rtl .field_type_list li.frmbutton .frmsvg,
	.rtl .frmbutton.ui-sortable-helper i,
	.rtl .field_type_list li.frmbutton i {
		margin: .15em .1em .15em 0;
	}

	.frm_wrap .frm-search {
		float: none !important;
		width: auto;
		clear: both;
	}

	.post-type-frm_display #frm_adv_info {
		top: auto !important;
		position: static;
		width: auto;
	}

	.frm_wrap .frm-right-panel #frm_adv_info,
	.frm_wrap #postbox-container-1 #frm_adv_info {
		min-width: 275px;
	}

	.frm_wrap #frm_adv_info ul.category-tabs li,
	.frm_wrap #frm_adv_info ul.category-tabs li.tabs {
		border: none;
	}

	.frm_wrap #frm_adv_info ul.category-tabs li:first-child {
		margin-left: 12px;
	}

	.frm_wrap #frm_adv_info ul.category-tabs li.tabs {
		border-bottom: 2px solid #5b9dd9;
		padding-bottom: 8px;
	}

	.post-type-frm_display #poststuff {
		padding: 10px 25px;
	}

	.post-type-frm_display #side-sortables .postbox {
		margin-bottom: 20px;
		border-radius: var(--small-radius);
		border-top-width: 1px;
	}
}

@media only screen and (max-width: 782px) {
	.frm-white-body,
	.frm_wrap {
		--small-sidebar: 20%;
		--medium-sidebar: 35%
	}

	#form_settings_page .advanced_settings .form-table td, .form-table th {
		display: table-cell;
		width: auto !important;
	}

	.frm-white-body #publishing-action,
	.frm_wrap #publishing-action {
		line-height: normal;
	}

	.frm-white-body #screen-meta-links {
		display: none;
	}

	.frm_wrap .misc-pub-section {
		padding: 6px 0;
	}

	.frm_wrap .misc-pub-section > a {
		float: none;
		white-space: nowrap;
	}

	.frm-form-setting-tabs a {
		position: relative;
		padding: 10px 5px 10px 40px;
	}

	.frm-form-setting-tabs a .frmsvg,
	.frm-form-setting-tabs a i {
		position: absolute;
		left: 13px;
		top: calc(50% - 10px);
		margin: 0;
	}

	#frm-insert-fields .button,
	#frm-insert-fields .button a,
	.frmbutton.ui-sortable-helper a {
		line-height: 26px;
		max-height: 28px;
	}

	a.frm_add_logic_link {
		margin-left: 0;
		margin-right: 0;
		width: 100%;
		box-sizing: border-box;
	}

	a.frm_add_logic_link .frmsvg,
	a.frm_add_logic_link i {
		display: none;
	}

	#new_fields .frm_single_option select,
	#new_fields .frm_single_option input[type=text] {
		width: calc(100% - 83px);
	}

	.frm_single_entry_page .frm_form_fields input[type=text],
	.frm_single_entry_page .frm_form_fields select,
	.frm_single_entry_page .frm_form_fields textarea {
		width: 100%;
	}

	.with_frm_style .frm_radio input[type=radio],
	.with_frm_style .frm_checkbox input[type=checkbox] {
		width: 25px !important;
	}

	.frm_single_entry_page .with_frm_style .frm_radio input[type=radio],
	.frm_single_entry_page .with_frm_style .frm_checkbox input[type=checkbox] {
		width: 18px !important;
	}

	.wp-list-table.toplevel_page_formidable .column-entries,
	.wp-list-table.toplevel_page_formidable .column-form_key,
	.wp-list-table.toplevel_page_formidable .column-shortcode,
	.wp-list-table.toplevel_page_formidable .column-created_at {
		display: none !important;
	}

	.wp-list-table.toplevel_page_formidable td.column-entries,
	.wp-list-table.toplevel_page_formidable td.column-form_key,
	.wp-list-table.toplevel_page_formidable td.column-shortcode,
	.wp-list-table.toplevel_page_formidable td.column-created_at {
		padding: 3px 8px 3px 35%;
		text-align: left;
	}

	#form_entries_page .wp-list-table th.frm_hidden,
	#form_entries_page .wp-list-table td.frm_hidden {
		display: none !important;
	}

	.frm-white-body.auto-fold #wpcontent {
		padding-left: 0;
	}

	.frm_right_addon .frm_remove_field {
		bottom: 11px;
	}

	.frm-addons {
		grid-template-columns: 1fr;
	}

	.frm-admin-page-styles .frm_page_container,
	.frm_wrap .frm_page_container {
		left: 0 !important;
		top: 46px !important;
		height: calc( 100vh - 46px ) !important;
	}

	.frm_single_entry_page.frm_wrap .columns-2 {
		display: block;
		border-bottom: none;
	}

	.frm_single_entry_page .wrap.frm-with-margin {
		margin: 10px 20px;
	}

	.frm_single_entry_page #post-body-content + .frm-right-panel {
		width: auto;
		margin: 0 20px;
		border: 1px solid var(--sidebar-hover);
		border-radius: 6px;
	}

	#wp-content-media-buttons a.frm_insert_form {
		padding: 0 var(--gap-sm);
	}
}

@media only screen and (max-width: 700px) {
	.frm-white-body,
	.frm_wrap {
		--biggest-sidebar: 50%;
		--big-sidebar: 50%;
	}
}
/* ... */

